# cairo-desklet

./: CMakeLists.txt  config.h.cmake.in  copyright
data/: CMakeLists.txt  cairo-desklet.conf.in  cmake_install.cmake
src/: CMakeLists.txt  cairo-desklet-gui-simple.c  cairo-desklet-gui-simple.h  cairo-desklet-menu.c  cairo-desklet-menu.h  cairo-desklet-user-interaction.c  cairo-desklet-user-interaction.h  cairo-desklet.c  cmake_install.cmake
